--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
   "keywords": [
     "ethereum",
     "blockchain",
-    "rabbitmq",
+    "activemq",
     "postgresql",
     "distributed-system"
   ],
@@ -27,7 +27,7 @@
   "dependencies": {
     "ethers": "^6.15.0",
     "pg": "^8.11.3",
-    "amqplib": "^0.10.3",
+    "stompjs": "^2.3.3",
     "dotenv": "^16.3.1",
     "axios": "^1.6.2",
     "winston": "^3.11.0",
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
-    "@types/amqplib": "^0.10.4",
+    "@types/stompjs": "^2.3.4",
     "@types/pg": "^8.10.9",
     "@types/uuid": "^9.0.7",
     "typescript": "^5.3.3",
